# VortexServer

./: .dockerignore  .env.example  DAO_PATTERN.md  Dockerfile  README.md  SECURITY_TELEGRAM.md  TELEGRAM_AUTH_INTEGRATION.md  docker-compose.infra.yml  docker-compose.yml  docker-entrypoint.sh  idempotency_demo.py  manual_auth_test.py  pyproject.toml  requirements.txt  test_app.py  test_auth_integration.py  test_auth_telegram.py  test_dao_pattern.py  test_gifts_inventory_api.py  test_idempotency.py  test_integration.py  test_me_protected.py  test_redis_dao.py
alembic/: env.py  script.py.mako
alembic/versions/: 20250912_0001_initial_revision.py  20250914_0002_add_price_to_gift.py  568b3cac04b1_change_gift_rarity_to_enum.py  6073246de6f3_add_img_to_gift_table.py  63ba23020021_add_field_price_to_gift.py
app/: __init__.py  main.py
app/admin/: __init__.py  views.py
app/api/: auth.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth_telegram.py  cases.py  gifts.py  inventory.py  upgrade.py  users.py
app/bot/: bot.py
app/config/: settings.py
app/core/: cache.py  cache_keys.py  database.py
app/dao/: __init__.py  base.py  case.py  gift.py  inventory.py  inventory_item.py  transaction.py  user.py
app/models/: __init__.py  base.py  case.py  gift.py  inventory.py  inventory_item.py  transaction.py  user.py
tests/: test_app.py  test_auth_telegram.py  test_dao_gift_inventory.py  test_gifts_inventory_api.py
